--- a/project.ioc
+++ b/project.ioc
@@ -10,21 +10,24 @@ Mcu.Family=STM32G4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP3=TIM2
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32G431C(6-8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=VP_SYS_VS_DBSignals
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PF0-OSC_IN
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PA9
 Mcu.Pin5=PA10
 Mcu.Pin6=PA13
 Mcu.Pin7=PA14
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_SYS_VS_DBSignals
-Mcu.PinsNb=10
+Mcu.Pin8=PB7
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431CBTx
@@ -40,6 +43,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Multiprocessor_communication
@@ -50,6 +54,11 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA9.Mode=Multiprocessor_communication
 PA9.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Speed,PinState
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB7.Locked=true
+PB7.PinState=GPIO_PIN_RESET
+PB7.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -90,7 +99,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI1_Init-SPI1-false-LL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -134,6 +143,10 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=170000000
 RCC.VCOInputFreq_Value=5000000
 RCC.VCOOutputFreq_Value=340000000
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=PeriodNoDither,Prescaler,AutoReloadPreload
+TIM2.PeriodNoDither=170*20-1
+TIM2.Prescaler=1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Multiprocessor_communication,BaudRate
 USART1.VirtualMode-Multiprocessor_communication=VM_ASYNC
@@ -141,4 +154,6 @@ VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
